--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -27,6 +27,8 @@
 \def\authorc{Aaron Esser-Kahn}
 \def\authord{Ishanu Chattopadhyay}
 
+\def\addressf{Department of Computer Science, University of Chicago, IL, USA}
+\def\addressg{Committee on Computational and Applied Mathematics, University of Chicago, IL, USA}
 \def\addressa{Department of Medicine, University of Chicago, IL, USA}
 \def\addressb{Committee on Genetics, Genomics \& Systems Biology, University of Chicago, IL, USA}
 \def\addressc{Committee on Quantitative Methods in Social, Behavioral, and Health Sciences, University of Chicago, IL, USA}
@@ -40,14 +42,18 @@
 %###################################
 
 \title{\LARGE \TITLE}
-\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1}$,\authora$^{1}$,  \authorc$^{2,3}$, and \authord$^{1,4,5\bigstar}$\\                                                                
+\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1,6}$,\authora$^{1,5}$,  \authorc$^{2,3}$, and \authord$^{1,4,7\bigstar}$\\                                                                
 \vspace{10pt}                                                                   
 
 \sffamily  \fontsize{10}{12}\selectfont                                         
 $^{1}$\addressa\\   
 $^{2}$\addressd\\
 $^{3}$\addresse\\
-$^{5}$\addressc                                                                 
+$^{4}$\addressc\\                                                                 
+$^{5}$\addressf\\                                                               
+$^{6}$\addressg\\
+$^{7}$\addressb
+
 \vskip 1em                                                                      
 $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uchicago.edu}.}
 
